# ndip-workflows

./: .gitignore  218386_set.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: tests-and-build.yml
docs/: experiment-workflows.md  state-handling.md  state-schema.md  tool-result-schema.md
example/: batch.yaml
src/ndip_state/: __init__.py  adapters.py  canonicalize.py  package.py  projection.py  run.py  state.py
src/yaml_parser/: cli.py  seed.py
tests/: test_adapters.py  test_canonicalize_module.py  test_canonicalize_paths.py  test_cli.py  test_e2e_state_chain.py  test_ndip_shim.py  test_package.py  test_projection.py  test_run_e2e.py  test_seed.py  test_state.py  test_state_env_helper.py  test_state_inlining.py
tools/: analyzer.xml  analyzer.xml.in  build_tool_xmls.py  data_assembler.xml  data_assembler.xml.in  ndip_shim.py  reduction.xml  reduction.xml.in  seed_config.xml  simple_analyzer.xml  simple_analyzer.xml.in  yaml_parser.xml
workflows/: Galaxy-Workflow-LR_Reduce_Batch.ga
